Team changes: red color and index update

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </ul>
 </section>
 <footer>
-    <p>Contact : email@example.com</p>
+    <p>Contact :sadinoureddine11001@gmail.com.com</p>
 </footer>
 </body>
 </html>
